
=======================================================
            WanT code:  Log of Changes 
=======================================================

30 Mar 2007      Current calculation added to transport. (BB)

29 Mar 2007      Bug fixed when giving nk(:) to conductor from input. Courtesy of 
                 Matias Nunez. (AF) 

28 Mar 2007      Calls to flush_unit added in wfc_manager, summary and improved in 
                 disentangle. (AF)

25 Mar 2007      Defaults to nprint and nsave stuff incremented. collect_wf.f90 routine
                 and collect procedure fixed. Bug in conditioned minimization fixed: 
                 there were problems when one or more centers were jumping out of the
                 reference cell: the issue was first raised by Laura Zoppi. (AF)

24 Mar 2007      Kpt symmetrization added to transport (Time-reversal symmetry implemented
                 at the moment). Vars "USE_SYMM" and "S(3)" added to transport input.
                 Default to use_symm set to temporarily to .FALSE. (AF)
                 Memory issue in transport fixed. (BB)

23 Mar 2007      f_defs.h (definitions for fortran files) generated by configure
                 following "the octopus way" (suggested by C.A. Rozzi). 
                 Other changes to configure.ac to fix a -I issue related to IFLAGS. 
                 TIme reversal symmetry implemented in transport calculation. (AF)

16 Mar 2007      rcut variable added to midpoint.f90 to define an upper bound for
                 bond lengths. (AF)

14 Mar 2007      Parsing of output files implemented (parser_output.awk added);
                 check.sh script strongly updated to allow for automatic test check. (AF)

12 Mar 2007      Auxiliary allowed value for spin_component "dw" added. Input var 
                 spin_component deleted from plot namelist since already overwritten
                 by the value read from .space file. Documentation updated. 