@@ -3,6 +3,9 @@
             WanT code:  Log of Changes 
 =======================================================
 
+
+08 Apr 2007      Txt output of conductor.x improved. (AF)  
+
 30 Mar 2007      Current calculation added to transport. (BB)
 
 29 Mar 2007      Bug fixed when giving nk(:) to conductor from input. Courtesy of 
